--- a/index.html
+++ b/index.html
@@ -1,74 +1,70 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="css/main.css">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="css/main.css" />
     <title>Hrashqner</title>
-</head>
-<body>
+  </head>
+  <body>
     <div class="wrapper">
-        <!-- ==========================Artashes============================================= -->
-        <section class="search_members">
-            <input type="search">
-            <span class="members"></span>
-        </section>
-        <!-- ==========================Artashes============================================= -->
+      <!-- ==========================Artashes============================================= -->
+      <section class="search_members">
+        <input type="search" />
+        <span class="members"></span>
+      </section>
+      <!-- ==========================Artashes============================================= -->
 
-        <!-- ==========================Mariam=============================================== -->
+      <!-- ==========================Mariam=============================================== -->
 
-        <section class="left_menu">
-            <menu>????????????</menu>
-        </section>
+      <section class="left_menu">
+        <menu>????????????</menu>
+      </section>
 
-        <section class="single_minded">
-            <section class="ava">
+      <section class="single_minded">
+        <section class="ava"></section>
+        <section class="somon"></section>
+        <section class="lilah"></section>
+      </section>
+      <!-- ==========================Mariam============================================= -->
+      <!-- ==========================Arman============================================== -->
+      <section class="blue_box">
+        <div>inch vor nkar</div>
+        <p>TEXT</p>
+        <button>See More</button>
+      </section>
+      <!-- ==========================Arman=============================================== -->
+      <!-- ==========================Arus================================================ -->
 
-            </section>
-            <section class="somon">
-
-            </section>
-            <section class="lilah">
-
-            </section>
-        </section>
-        <!-- ==========================Mariam============================================= -->
-        <!-- ==========================Arman============================================== -->
-        <section class="blue_box">
-            <div>inch vor nkar</div>
-            <p>TEXT</p>
-            <button>See More</button>
-        </section>
-        <!-- ==========================Arman=============================================== -->
-        <!-- ==========================Arus================================================ -->
-
-        <section class="aussie_chef">
-            <span class="col_1"></span>
-            <span class="col_2"></span>
-            <span class="col_4"></span>
-            <span class="col_5"></span>
-            <span class="col_6"></span>
-            <span class="col_7"></span>
-            <span class="col_8"></span>
-            <span class="col_9"></span>
-            <span class="col_10"></span>
-            <span class="col_11"></span>
-        </section>
-        <!-- ==========================Arus================================================= -->
-        <!-- ==========================Ani================================================== -->
-        <section class="soc_media">
-            <div class="twit"></div>
-            <div class="insta"></div>
-            <div class="fb"></div>
-            <div class="beh"></div>
-        </section>
-        <!-- ==========================Ani================================================== -->
+      <section class="aussie_chef">
+        <p>Aussie chef shares culinary</p>
+        <div class="aussie_chef-container">
+          <span title="01" class="col_1"></span>
+          <span title="02" class="col_2"></span>
+          <span title="03" class="col_3"></span>
+          <span title="04" class="col_4"></span>
+          <span title="05" class="col_5"></span>
+          <span title="06" class="col_6"></span>
+          <span title="07" class="col_7"></span>
+          <span title="08" class="col_8"></span>
+          <span title="09" class="col_9"></span>
+          <span title="10" class="col_10"></span>
+          <span title="11" class="col_11"></span>
+          <span title="12" class="col_12"></span>
+        </div>
+      </section>
+      <!-- ==========================Arus================================================= -->
+      <!-- ==========================Ani================================================== -->
+      <section class="soc_media">
+        <div class="twit"></div>
+        <div class="insta"></div>
+        <div class="fb"></div>
+        <div class="beh"></div>
+      </section>
+      <!-- ==========================Ani================================================== -->
     </div>
-    
-
-
 
     <script src="js/main.js"></script>
-</body>
+  </body>
 </html>
