--- a/index.html
+++ b/index.html
@@ -1,74 +1,78 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="css/main.css">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="css/main.css" />
     <title>Hrashqner</title>
-</head>
-<body>
+  </head>
+  <body>
     <div class="wrapper">
-        <!-- ==========================Artashes============================================= -->
-        <section class="search_members">
-            <input type="search">
-            <span class="members"></span>
-        </section>
-        <!-- ==========================Artashes============================================= -->
+      <!-- ==========================Artashes============================================= -->
+      <section class="search_members">
+        <input type="search" />
+        <span class="members"></span>
+      </section>
+      <!-- ==========================Artashes============================================= -->
 
-        <!-- ==========================Mariam=============================================== -->
+      <!-- ==========================Mariam=============================================== -->
 
-        <section class="left_menu">
-            <menu>????????????</menu>
-        </section>
+      <section class="left_menu">
+        <menu>????????????</menu>
+      </section>
 
-        <section class="single_minded">
-            <section class="ava">
+      <section class="single_minded">
+        <section class="ava"></section>
+        <section class="somon"></section>
+        <section class="lilah"></section>
+      </section>
+      <!-- ==========================Mariam============================================= -->
+      <!-- ==========================Arman============================================== -->
+      <section class="blue_box">
+        <div class="blue_box_images">
+          <img class="blue_box_img1" src="./img/Path (1).png" alt="" />
+          <img class="blue_box_img2" src="./img/Path (2).png" alt="" />
+          <img class="blue_box_img3" src="./img/Path.png" alt="" />
+          <img class="blue_box_img4" src="./img/Rectangle.png" alt="" />
+        </div>
+        <div class="blue_box_description">
+          <p class="blue_box_title">Creative outdoor ads</p>
+          <p class="blue_box_paragraph">
+            Every large design company whether it’s a multi-national branding<br />
+            corporation or a regular down at heel tatty magazine publisher
+            needs<br />
+            to fill holes in the workforce.
+          </p>
+        </div>
+        <button class="blue_box_button">See More</button>
+      </section>
+      <!-- ==========================Arman=============================================== -->
+      <!-- ==========================Arus================================================ -->
 
-            </section>
-            <section class="somon">
-
-            </section>
-            <section class="lilah">
-
-            </section>
-        </section>
-        <!-- ==========================Mariam============================================= -->
-        <!-- ==========================Arman============================================== -->
-        <section class="blue_box">
-            <div>inch vor nkar</div>
-            <p>TEXT</p>
-            <button>See More</button>
-        </section>
-        <!-- ==========================Arman=============================================== -->
-        <!-- ==========================Arus================================================ -->
-
-        <section class="aussie_chef">
-            <span class="col_1"></span>
-            <span class="col_2"></span>
-            <span class="col_4"></span>
-            <span class="col_5"></span>
-            <span class="col_6"></span>
-            <span class="col_7"></span>
-            <span class="col_8"></span>
-            <span class="col_9"></span>
-            <span class="col_10"></span>
-            <span class="col_11"></span>
-        </section>
-        <!-- ==========================Arus================================================= -->
-        <!-- ==========================Ani================================================== -->
-        <section class="soc_media">
-            <div class="twit"></div>
-            <div class="insta"></div>
-            <div class="fb"></div>
-            <div class="beh"></div>
-        </section>
-        <!-- ==========================Ani================================================== -->
+      <section class="aussie_chef">
+        <span class="col_1"></span>
+        <span class="col_2"></span>
+        <span class="col_4"></span>
+        <span class="col_5"></span>
+        <span class="col_6"></span>
+        <span class="col_7"></span>
+        <span class="col_8"></span>
+        <span class="col_9"></span>
+        <span class="col_10"></span>
+        <span class="col_11"></span>
+      </section>
+      <!-- ==========================Arus================================================= -->
+      <!-- ==========================Ani================================================== -->
+      <section class="soc_media">
+        <div class="twit"></div>
+        <div class="insta"></div>
+        <div class="fb"></div>
+        <div class="beh"></div>
+      </section>
+      <!-- ==========================Ani================================================== -->
     </div>
-    
-
-
 
     <script src="js/main.js"></script>
-</body>
+  </body>
 </html>
