Make some changes

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
       <!-- ==========================Arus================================================ -->
 
       <section class="aussie_chef">
-        <p>Aussie chef shares culinary</p>
+        <p class="aussie_chef-title">Aussie chef shares culinary</p>
         <div class="aussie_chef-container">
           <span title="01" class="col_1"></span>
           <span title="02" class="col_2"></span>
