--- a/index.html
+++ b/index.html
@@ -23,14 +23,128 @@
         </section>
 
         <section class="single_minded">
-            <section class="ava">
-
+            <section class="ava profile_info">
+                <div class="profile_image">
+                    <div class="img"></div>
+                    <div class="info">
+                        <span class="name">
+                            Ava Gregoraci
+                        </span>
+                        <span>Bulgaria</span>
+                    </div>
+                    <div  class="dropdown">
+                        ...
+                    </div>
+                </div>
+                <div class="loading_container">
+                    <div class="loading_info">
+                        <span>Instagram</span>
+                        <span class="green">65,376</span>
+                    </div>
+                    <div class="loader">
+                        <div class="percent"></div>
+                    </div>
+                </div>
+                <div class="loading_container">
+                    <div class="loading_info">
+                        <span>Facebook</span>
+                        <span class="green">12,109</span>
+                    </div>
+                    <div class="loader">
+                        <div class="percent"></div>
+                    </div>
+                </div>
+                <div class="loading_container">
+                    <div class="loading_info">
+                        <span>Twitter</span>
+                        <span class="green">132,645</span>
+                    </div>
+                    <div class="loader">
+                        <div class="percent"></div>
+                    </div>
+                </div>
             </section>
-            <section class="somon">
-
+            <section class="somon profile_info">
+                <div class="profile_image">
+                    <div class="img"></div>
+                    <div class="info">
+                        <span class="name">
+                            Somun Ae-Ri
+                        </span>
+                        <span>Bulgaria</span>
+                    </div>
+                    <div  class="dropdown">
+                        ...
+                    </div>
+                </div>
+                <div class="loading_container">
+                    <div class="loading_info">
+                        <span>Instagram</span>
+                        <span class="red">34,567</span>
+                    </div>
+                    <div class="loader">
+                        <div class="percent"></div>
+                    </div>
+                </div>
+                <div class="loading_container">
+                    <div class="loading_info">
+                        <span>Facebook</span>
+                        <span class="red">56,387</span>
+                    </div>
+                    <div class="loader">
+                        <div class="percent"></div>
+                    </div>
+                </div>
+                <div class="loading_container">
+                    <div class="loading_info">
+                        <span>Twitter</span>
+                        <span class="red">48,719</span>
+                    </div>
+                    <div class="loader">
+                        <div class="percent"></div>
+                    </div>
+                </div>
             </section>
-            <section class="lilah">
-
+            <section class="lilah profile_info">
+                <div class="profile_image">
+                    <div class="img"></div>
+                    <div class="info">
+                        <span class="name">
+                            Lilah Ioselev
+                        </span>
+                        <span>Bulgaria</span>
+                    </div>
+                    <div  class="dropdown">
+                        ...
+                    </div>
+                </div>
+                <div class="loading_container">
+                    <div class="loading_info">
+                        <span>Instagram</span>
+                        <span class="purple">48,910</span>
+                    </div>
+                    <div class="loader">
+                        <div class="percent"></div>
+                    </div>
+                </div>
+                <div class="loading_container">
+                    <div class="loading_info">
+                        <span>Facebook</span>
+                        <span class="purple">34,455</span>
+                    </div>
+                    <div class="loader">
+                        <div class="percent"></div>
+                    </div>
+                </div>
+                <div class="loading_container">
+                    <div class="loading_info">
+                        <span>Twitter</span>
+                        <span class="purple">23,809</span>
+                    </div>
+                    <div class="loader">
+                        <div class="percent"></div>
+                    </div>
+                </div>
             </section>
         </section>
         <!-- ==========================Mariam============================================= -->
