Created page header

--- a/index.html
+++ b/index.html
@@ -11,15 +11,29 @@
     <div class="wrapper">
         <!-- ==========================Artashes============================================= -->
         <section class="search_members">
-            <input type="search">
-            <span class="members"></span>
+           <header class="wrapper_header">
+               <div class="wrapper_header-logo">
+                  <label class="searchLabel"> <img src="./img/Search.svg" alt="Logo" id="searchLogo"/> <input type="search" placeholder="Search" id="searchInput" /></label>
+               </div>
+               <div class="user_container">
+                <img src="./img/photo1.png" alt="Logo"  class="user1"/>
+                <img src="./img/green.svg" alt="Logo" class="greenCircle"/>
+                <img src="./img/Photo2.png" alt="Logo" class="user2" />
+                <img src="./img/Photo.png" alt="Logo" class="user3"/>
+                <img src="./img/Color.png" alt="Logo" class="user4"/>
+                <img src="./img/plus.svg" alt="Logo" class="plus"/>
+
+                   
+               </div>
+
+           </header>
         </section>
         <!-- ==========================Artashes============================================= -->
 
         <!-- ==========================Mariam=============================================== -->
 
         <section class="left_menu">
-            <menu>????????????</menu>
+            <menu></menu>
         </section>
 
         <section class="single_minded">
@@ -36,9 +50,9 @@
         <!-- ==========================Mariam============================================= -->
         <!-- ==========================Arman============================================== -->
         <section class="blue_box">
-            <div>inch vor nkar</div>
-            <p>TEXT</p>
-            <button>See More</button>
+            <div></div>
+            <p></p>
+            <button></button>
         </section>
         <!-- ==========================Arman=============================================== -->
         <!-- ==========================Arus================================================ -->
