adding progress bar

--- a/index.html
+++ b/index.html
@@ -57,16 +57,30 @@
         </section>
         <!-- ==========================Arus================================================= -->
         <!-- ==========================Ani================================================== -->
-        <section class="soc_media">
-            <div class="twit"></div>
-            <div class="insta"></div>
-            <div class="fb"></div>
-            <div class="beh"></div>
-        </section>
+        <section class="canvas-section">
+            <div class="canvas-wrap">
+                <label  class="canvas-label">Twitter</label>
+                <canvas id="canvas1" width="160px" height="200px" ></canvas>
+                <span id="procent1"></span>
+              </div>
+            <div class="canvas-wrap">
+                <label  class="canvas-label">Instagram</label>
+                <canvas id="canvas2" width="160" height="200"></canvas>
+                <span id="procent2"></span>
+              </div>
+            <div class="canvas-wrap">
+                <label  class="canvas-label">Facebook</label>
+                <canvas id="canvas3" width="160" height="200"></canvas>
+                <span id="procent3"></span>
+            </div>
+            <div class="canvas-wrap">
+                <label  class="canvas-label">Behance</label>
+                <canvas id="canvas4" width="160" height="200"></canvas>
+                <span id="procent4"></span>
+            </div>
+            </section>        
         <!-- ==========================Ani================================================== -->
     </div>
-    
-
 
 
     <script src="js/main.js"></script>
